so much more and new is now workinggggggg woooooooooooooooo

--- a/indexing/index_demo.ipynb
+++ b/indexing/index_demo.ipynb
@@ -104,115 +104,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>docno</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>d1</td>\n",
-       "      <td>In our interview with Janne Aas Jakobsen Found...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>d2</td>\n",
-       "      <td>In an era where the digital landscape is const...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>d3</td>\n",
-       "      <td>In this insightful interview we explore the en...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>d4</td>\n",
-       "      <td>Making wise decisions and staying ahead of the...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>d5</td>\n",
-       "      <td>In the quickly developing field of artificial ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7555</th>\n",
-       "      <td>d7556</td>\n",
-       "      <td>Welcome to Analytics Vidhya Welcome to Analyti...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7556</th>\n",
-       "      <td>d7557</td>\n",
-       "      <td>Appropriate space allocation and compelling vi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7557</th>\n",
-       "      <td>d7558</td>\n",
-       "      <td>Business Analytics has become a catch all word...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7558</th>\n",
-       "      <td>d7559</td>\n",
-       "      <td>Joining Merging in SAS alternate approaches i...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7559</th>\n",
-       "      <td>d7560</td>\n",
-       "      <td>Imagine how the world would change when any ad...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7560 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      docno                                               text\n",
-       "0        d1  In our interview with Janne Aas Jakobsen Found...\n",
-       "1        d2  In an era where the digital landscape is const...\n",
-       "2        d3  In this insightful interview we explore the en...\n",
-       "3        d4  Making wise decisions and staying ahead of the...\n",
-       "4        d5  In the quickly developing field of artificial ...\n",
-       "...     ...                                                ...\n",
-       "7555  d7556  Welcome to Analytics Vidhya Welcome to Analyti...\n",
-       "7556  d7557  Appropriate space allocation and compelling vi...\n",
-       "7557  d7558  Business Analytics has become a catch all word...\n",
-       "7558  d7559   Joining Merging in SAS alternate approaches i...\n",
-       "7559  d7560  Imagine how the world would change when any ad...\n",
-       "\n",
-       "[7560 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "docs_df = pd.DataFrame(pd.DataFrame([{'text': entry['text']} for entry in data]))\n",
@@ -239,7 +131,9 @@
     "# docs_df.to_json('./db/docs_df.json', orient='records', lines=True, force_ascii=True)\n",
     "\n",
     "# docs_df.style\n",
-    "docs_df\n"
+    "docs_df\n",
+    "\n",
+    "docs_df.to_csv('../indexing/db/docs_df.csv', index=False)\n"
    ]
   },
   {
@@ -13296,7 +13190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13319,7 +13213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
